// <auto-generated>
// Generated by RemoteMvvmTool.
// </auto-generated>

syntax = "proto3";

package pointer_viewmodels_protos;

option csharp_namespace = "Pointer.ViewModels.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the PointerViewModel
message PointerViewModelState {
  bool show = 1; // Original C#: bool Show
  bool show_spinner = 2; // Original C#: bool ShowSpinner
  int32 clicks_to_pass = 3; // Original C#: int ClicksToPass
  bool is3_btn = 4; // Original C#: bool Is3Btn
  int32 test_timeout_sec = 5; // Original C#: int TestTimeoutSec
  string instructions = 6; // Original C#: string Instructions
  bool show_cursor_test = 7; // Original C#: bool ShowCursorTest
  bool show_config_selection = 8; // Original C#: bool ShowConfigSelection
  bool show_click_instructions = 9; // Original C#: bool ShowClickInstructions
  bool show_timer = 10; // Original C#: bool ShowTimer
  bool show_bottom = 11; // Original C#: bool ShowBottom
  string timer_text = 12; // Original C#: string TimerText
  string selected_device = 13; // Original C#: string SelectedDevice
  int32 last_click_count = 14; // Original C#: int LastClickCount
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
  // Optional fields for complex property updates
  string property_path = 3;          // For nested properties like "User.Address.Street"
  string collection_key = 4;         // For dictionary keys or array indices
  int32 array_index = 5;             // For updating specific array elements
  string operation_type = 6;         // "set", "add", "remove", "clear", "insert"
}

message UpdatePropertyValueResponse {
  bool success = 1;
  string error_message = 2;          // Error details if success=false
  string validation_errors = 3;      // Validation error details
  google.protobuf.Any old_value = 4; // Previous value for undo operations
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
  // Enhanced notification details
  string property_path = 3;          // Full path for nested changes
  string change_type = 4;            // "property", "collection", "nested"
  google.protobuf.Any old_value = 5; // Previous value
}

message InitializeRequest {}
message InitializeResponse {}

message OnCursorTestRequest {}
message OnCursorTestResponse {}

message OnClickTestRequest {
  int32 button = 1; // Original C#: int button
}
message OnClickTestResponse {}

message OnSelectDeviceRequest {
  string device = 1; // Original C#: string device
}
message OnSelectDeviceResponse {}

message OnSelectNumButtonsRequest {
  int32 btn_count = 1; // Original C#: int btnCount
}
message OnSelectNumButtonsResponse {}

message GetClicksWithoutNotificationRequest {
  string button = 1; // Original C#: string button
}
message GetClicksWithoutNotificationResponse {}

message ResetClicksRequest {}
message ResetClicksResponse {}

message CancelTestRequest {}
message CancelTestResponse {}

message FinishTestRequest {}
message FinishTestResponse {}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service PointerViewModelService {
  rpc GetState (google.protobuf.Empty) returns (PointerViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (UpdatePropertyValueResponse);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc Initialize (InitializeRequest) returns (InitializeResponse);
  rpc OnCursorTest (OnCursorTestRequest) returns (OnCursorTestResponse);
  rpc OnClickTest (OnClickTestRequest) returns (OnClickTestResponse);
  rpc OnSelectDevice (OnSelectDeviceRequest) returns (OnSelectDeviceResponse);
  rpc OnSelectNumButtons (OnSelectNumButtonsRequest) returns (OnSelectNumButtonsResponse);
  rpc GetClicksWithoutNotification (GetClicksWithoutNotificationRequest) returns (GetClicksWithoutNotificationResponse);
  rpc ResetClicks (ResetClicksRequest) returns (ResetClicksResponse);
  rpc CancelTest (CancelTestRequest) returns (CancelTestResponse);
  rpc FinishTest (FinishTestRequest) returns (FinishTestResponse);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}

